# birdie

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  publish.yml  python-package.yml
birdie/: __init__.py  cli.py  main.py
birdie/agent/: __init__.py  graph.py  run.py
birdie/agents/summarizer/: AGENT.MD
birdie/core/: __init__.py  acp_mcp_server.py  adapter.py  agent_loader.py  agent_registry.py  agent_runner.py  entrypoints.py  errors.py  llm_provider.py  loader.py  ltm.py  mcp_client.py  models.py  policy.py  registry.py  retrieval.py  session.py
birdie/skills/duckduckgo/: SKILL.MD  tools.py
birdie/skills/filesystem/: SKILL.MD
birdie/skills/mcp_demo/: SKILL.MD  server.py
birdie/skills/shell/: SKILL.MD
birdie/skills/ssh/: SKILL.MD
birdie/skills/todo/: SKILL.MD  tools.py
birdie/skills/weather/: SKILL.MD  tools.py
doc/: agents.md  architecture.md  cli.md  mcp.md  memory.md  skills.md
examples/: 01_hello_world.py  02_inspect_skills.py  03_web_search.py  04_shell_commands.py  05_multi_turn.py  06_streaming.py  07_long_term_memory.py  08_sqlite_persistence.py  09_custom_skill.py  10_mcp_tool.py  11_sub_agent.py  README.md  persistence_demo.db
examples/agents/summarizer/: AGENTS.MD
tests/: __init__.py  test_agent_loader.py  test_agent_registry.py  test_compaction.py  test_custom_system_prompt.py  test_integration.py  test_llm_provider.py  test_loader.py  test_ltm.py  test_mcp_client.py  test_models.py  test_policy.py  test_progressive_skill_loading.py  test_registry.py  test_retrieval.py  test_session.py  test_skill_loading_priority.py  test_warning_suppression.py
