[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "birdie-agent"
version = "0.1.1"
description = "Dynamic skill-based LangGraph agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gernot Kvas", email = "gernot@kvas.at"}
]
keywords = ["llm", "agent", "langgraph", "langchain", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite",
    "pydantic>=2.0",
    "requests",
    "pyyaml",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
mistral = ["mistralai>=1.0"]
anthropic = ["anthropic>=0.25"]
gemini = []
mcp = ["mcp>=1.0", "langchain-mcp-adapters>=0.1"]

[project.scripts]
birdie = "birdie.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["birdie*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
