[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "birdie-agent"
version = "0.2.3"
description = "Dynamic skill-based LangGraph agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Gernot Kvas", email = "gernot@kvas.at"}
]
keywords = ["llm", "agent", "langgraph", "langchain", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite",
    "pydantic>=2.0",
    "requests",
    "httpx>=0.27",
    "pyyaml",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "mistralai>=1.0",
    "anthropic>=0.25",
    "mcp>=1.0",
    "langchain-mcp-adapters>=0.1",
    "ddgs>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
gemini = []

[project.scripts]
birdie = "birdie.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["birdie*"]

[tool.setuptools.package-data]
"birdie" = ["skills/*/SKILL.MD", "skills/mcp_demo/server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
